# shuttle-hackathon-server

./: .gitignore  Makefile  README.md  app.py  ci.spec  requirements.txt
app/: __init__.py  api.py  pages.py
app/templates/pages/: about.html  index.html
hello-world/: ci.spec  requirements.txt
langserve/: pyproject.toml  requirements.txt  server.py
