[tool.poetry]
name = "langserve-server"
version = "0.1.0"
description = ""
authors = ["Joshua Mo <joshua.mo.876@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.111.0"
langchain = "^0.2.6"
langserve = "^0.2.2"
langchain-anthropic = "^0.1.19"
sse-starlette = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
